Criando o módulo App MAterial e organizando os imports

--- a/crud-angular/src/app/courses/courses/courses.component.html
+++ b/crud-angular/src/app/courses/courses/courses.component.html
@@ -1,3 +1,6 @@
+<mat-card>
+  <mat-card-content>
+    <mat-toolbar color="primary"><span>Cursos Disponíveis</span></mat-toolbar>
 <table mat-table [dataSource]="courses" class="mat-elevation-z8">
 
   <!--- Note that these columns can be defined in any order.
@@ -18,4 +21,5 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
-
+  </mat-card-content>
+</mat-card>
